Ensure immutability of the stored checkout map